# BI

./: .env.example  .impeccable.md  README.md  docker-compose.yml  package-lock.json
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/agent/: __init__.py  memory.py  orchestrator.py  prompt.py  retry.py  tools.py
backend/app/analytics/: base.py
backend/app/analytics/cards/: issuance_rate.py  replacement.py  scheme.py  usage_rate.py
backend/app/analytics/customer/: arpu.py  churn.py
backend/app/analytics/merchants/: onboarding.py  pos_growth.py
backend/app/analytics/settlement/: accuracy.py  approval_time.py
backend/app/analytics/transaction/: anomaly_value.py  anomaly_volume.py  approval_status.py  declined.py  geography.py  peak_time.py  type_analysis.py  value_trend.py  volume_trend.py
backend/app/api/: __init__.py  deps.py  middleware.py  routes.py
backend/app/connectors/: __init__.py  base.py  nosql.py  postgres.py  registry.py  sql_generic.py
backend/app/models/: __init__.py  request.py  response.py  session.py
backend/app/notifications/: models.py  store.py  stream.py  templates.py
backend/app/scheduler/: jobs.py  runner.py
backend/app/security/: rbac.py  sanitizer.py
backend/app/services/: auth_service.py  query_service.py  schema_service.py  session_service.py
backend/scratch/: trigger_test_notification.py
backend/tests/: conftest.py  test_agent.py  test_analytics.py  test_connectors.py  test_notifications.py  test_security.py
docker/: nginx.conf
(+39 files in other folders)
